--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.3.1",
     "react-phone-number-input": "^3.4.3",
     "react-router-dom": "^6.24.1",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -29,6 +30,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "json-server": "^1.0.0-beta.1",
     "vite": "^5.3.1"
   }
 }
